# pharmacy_django

./: .dockerignore  .env.example  Dockerfile  README.md  SCHEMA.md  docker-compose-ec2.yml  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
core/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py
pharmacy_api/: settings.py  urls.py
